--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-# vicspatial <img src='man/figures/logo.png' align="right" height="139" />
+# vicspatial 
+
+<img src='man/figures/logo.png' align="right" height="100" />
 
 <!-- badges: start -->
 [![Codecov test coverage](https://codecov.io/gh/JustinCally/vicspatial/branch/master/graph/badge.svg)](https://app.codecov.io/gh/JustinCally/vicspatial?branch=master)
